--- a/bundle_hadoop/src/assets/scss/blocks/right-nav.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/right-nav.scss
@@ -1,5 +1,6 @@
 .right-nav {
-  margin-right: 40px;
+  // margin-right: 40px;
+  // padding-right: 40px;
   // padding-left: 20px;
   width: 143px;
 }
