--- a/bundle_hadoop/src/assets/scss/blocks/content.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/content.scss
@@ -642,11 +642,11 @@
 // content body
 
 .content-body {
-  // padding-top: 56px;
+  padding-top: 24px;
 }
 
 .content-body__title {
-  margin-top: 48px;
+  margin-top: 24px;
   font-style: normal;
   font-weight: bold;
   font-size: 30px;
