--- a/bundle_hadoop/src/partials/sidebar.html
+++ b/bundle_hadoop/src/partials/sidebar.html
@@ -263,7 +263,7 @@
             <a href="#">Core components</a>
           </li>
           <li class="nav-links-li">
-            <a href="#">HDFS</a>
+            <a href="../hdfs.html">HDFS</a>
           </li>
           <li>
             <span class="nav-links_item_parent">
