--- a/bundle_hadoop/src/partials/sidebar.html
+++ b/bundle_hadoop/src/partials/sidebar.html
@@ -303,7 +303,7 @@
             </span>
             <ul class="is_parent">
               <li>
-                <a href="#"> references:hadoop-cli.adoc</a>
+                <a href="../hadoopcliref.html"> Hadoop CLI references</a>
               </li>
               <li>
                 <a href="#"> references:hdfs-cli.adoc</a>
