--- a/bundle_hadoop/src/assets/scss/blocks/bootstrap.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/bootstrap.scss
@@ -1949,290 +1949,267 @@ kbd kbd {
   }
 }
 
-.table {
-  width: 100%;
-  margin-bottom: 1rem;
-  color: #212529;
-}
+// .table-sm th,
+// .table-sm td {
+//   padding: 0.3rem;
+// }
 
-.table th,
-.table td {
-  padding: 0.75rem;
-  vertical-align: top;
-  border-top: 1px solid #dee2e6;
-}
+// .table-bordered {
+//   border: 1px solid #dee2e6;
+// }
 
-.table thead th {
-  vertical-align: bottom;
-  border-bottom: 2px solid #dee2e6;
-}
+// .table-bordered th,
+// .table-bordered td {
+//   border: 1px solid #dee2e6;
+// }
 
-.table tbody+tbody {
-  border-top: 2px solid #dee2e6;
-}
+// .table-bordered thead th,
+// .table-bordered thead td {
+//   border-bottom-width: 2px;
+// }
 
-.table-sm th,
-.table-sm td {
-  padding: 0.3rem;
-}
+// .table-borderless th,
+// .table-borderless td,
+// .table-borderless thead th,
+// .table-borderless tbody+tbody {
+//   border: 0;
+// }
 
-.table-bordered {
-  border: 1px solid #dee2e6;
-}
+// .table-striped tbody tr:nth-of-type(odd) {
+//   background-color: rgba(0, 0, 0, 0.05);
+// }
 
-.table-bordered th,
-.table-bordered td {
-  border: 1px solid #dee2e6;
-}
+// .table-hover tbody tr:hover {
+//   color: #212529;
+//   background-color: rgba(0, 0, 0, 0.075);
+// }
 
-.table-bordered thead th,
-.table-bordered thead td {
-  border-bottom-width: 2px;
-}
+// .table-primary,
+// .table-primary>th,
+// .table-primary>td {
+//   background-color: #b8daff;
+// }
 
-.table-borderless th,
-.table-borderless td,
-.table-borderless thead th,
-.table-borderless tbody+tbody {
-  border: 0;
-}
+// .table-primary th,
+// .table-primary td,
+// .table-primary thead th,
+// .table-primary tbody+tbody {
+//   border-color: #7abaff;
+// }
 
-.table-striped tbody tr:nth-of-type(odd) {
-  background-color: rgba(0, 0, 0, 0.05);
-}
+// .table-hover .table-primary:hover {
+//   background-color: #9fcdff;
+// }
 
-.table-hover tbody tr:hover {
-  color: #212529;
-  background-color: rgba(0, 0, 0, 0.075);
-}
+// .table-hover .table-primary:hover>td,
+// .table-hover .table-primary:hover>th {
+//   background-color: #9fcdff;
+// }
 
-.table-primary,
-.table-primary>th,
-.table-primary>td {
-  background-color: #b8daff;
-}
+// .table-secondary,
+// .table-secondary>th,
+// .table-secondary>td {
+//   background-color: #d6d8db;
+// }
 
-.table-primary th,
-.table-primary td,
-.table-primary thead th,
-.table-primary tbody+tbody {
-  border-color: #7abaff;
-}
+// .table-secondary th,
+// .table-secondary td,
+// .table-secondary thead th,
+// .table-secondary tbody+tbody {
+//   border-color: #b3b7bb;
+// }
 
-.table-hover .table-primary:hover {
-  background-color: #9fcdff;
-}
+// .table-hover .table-secondary:hover {
+//   background-color: #c8cbcf;
+// }
 
-.table-hover .table-primary:hover>td,
-.table-hover .table-primary:hover>th {
-  background-color: #9fcdff;
-}
+// .table-hover .table-secondary:hover>td,
+// .table-hover .table-secondary:hover>th {
+//   background-color: #c8cbcf;
+// }
 
-.table-secondary,
-.table-secondary>th,
-.table-secondary>td {
-  background-color: #d6d8db;
-}
+// .table-success,
+// .table-success>th,
+// .table-success>td {
+//   background-color: #c3e6cb;
+// }
 
-.table-secondary th,
-.table-secondary td,
-.table-secondary thead th,
-.table-secondary tbody+tbody {
-  border-color: #b3b7bb;
-}
+// .table-success th,
+// .table-success td,
+// .table-success thead th,
+// .table-success tbody+tbody {
+//   border-color: #8fd19e;
+// }
 
-.table-hover .table-secondary:hover {
-  background-color: #c8cbcf;
-}
+// .table-hover .table-success:hover {
+//   background-color: #b1dfbb;
+// }
 
-.table-hover .table-secondary:hover>td,
-.table-hover .table-secondary:hover>th {
-  background-color: #c8cbcf;
-}
+// .table-hover .table-success:hover>td,
+// .table-hover .table-success:hover>th {
+//   background-color: #b1dfbb;
+// }
 
-.table-success,
-.table-success>th,
-.table-success>td {
-  background-color: #c3e6cb;
-}
+// .table-info,
+// .table-info>th,
+// .table-info>td {
+//   background-color: #bee5eb;
+// }
 
-.table-success th,
-.table-success td,
-.table-success thead th,
-.table-success tbody+tbody {
-  border-color: #8fd19e;
-}
+// .table-info th,
+// .table-info td,
+// .table-info thead th,
+// .table-info tbody+tbody {
+//   border-color: #86cfda;
+// }
 
-.table-hover .table-success:hover {
-  background-color: #b1dfbb;
-}
+// .table-hover .table-info:hover {
+//   background-color: #abdde5;
+// }
 
-.table-hover .table-success:hover>td,
-.table-hover .table-success:hover>th {
-  background-color: #b1dfbb;
-}
+// .table-hover .table-info:hover>td,
+// .table-hover .table-info:hover>th {
+//   background-color: #abdde5;
+// }
 
-.table-info,
-.table-info>th,
-.table-info>td {
-  background-color: #bee5eb;
-}
+// .table-warning,
+// .table-warning>th,
+// .table-warning>td {
+//   background-color: #ffeeba;
+// }
 
-.table-info th,
-.table-info td,
-.table-info thead th,
-.table-info tbody+tbody {
-  border-color: #86cfda;
-}
+// .table-warning th,
+// .table-warning td,
+// .table-warning thead th,
+// .table-warning tbody+tbody {
+//   border-color: #ffdf7e;
+// }
 
-.table-hover .table-info:hover {
-  background-color: #abdde5;
-}
+// .table-hover .table-warning:hover {
+//   background-color: #ffe8a1;
+// }
 
-.table-hover .table-info:hover>td,
-.table-hover .table-info:hover>th {
-  background-color: #abdde5;
-}
+// .table-hover .table-warning:hover>td,
+// .table-hover .table-warning:hover>th {
+//   background-color: #ffe8a1;
+// }
 
-.table-warning,
-.table-warning>th,
-.table-warning>td {
-  background-color: #ffeeba;
-}
+// .table-danger,
+// .table-danger>th,
+// .table-danger>td {
+//   background-color: #f5c6cb;
+// }
 
-.table-warning th,
-.table-warning td,
-.table-warning thead th,
-.table-warning tbody+tbody {
-  border-color: #ffdf7e;
-}
+// .table-danger th,
+// .table-danger td,
+// .table-danger thead th,
+// .table-danger tbody+tbody {
+//   border-color: #ed969e;
+// }
 
-.table-hover .table-warning:hover {
-  background-color: #ffe8a1;
-}
+// .table-hover .table-danger:hover {
+//   background-color: #f1b0b7;
+// }
 
-.table-hover .table-warning:hover>td,
-.table-hover .table-warning:hover>th {
-  background-color: #ffe8a1;
-}
+// .table-hover .table-danger:hover>td,
+// .table-hover .table-danger:hover>th {
+//   background-color: #f1b0b7;
+// }
 
-.table-danger,
-.table-danger>th,
-.table-danger>td {
-  background-color: #f5c6cb;
-}
+// .table-light,
+// .table-light>th,
+// .table-light>td {
+//   background-color: #fdfdfe;
+// }
 
-.table-danger th,
-.table-danger td,
-.table-danger thead th,
-.table-danger tbody+tbody {
-  border-color: #ed969e;
-}
+// .table-light th,
+// .table-light td,
+// .table-light thead th,
+// .table-light tbody+tbody {
+//   border-color: #fbfcfc;
+// }
 
-.table-hover .table-danger:hover {
-  background-color: #f1b0b7;
-}
+// .table-hover .table-light:hover {
+//   background-color: #ececf6;
+// }
 
-.table-hover .table-danger:hover>td,
-.table-hover .table-danger:hover>th {
-  background-color: #f1b0b7;
-}
+// .table-hover .table-light:hover>td,
+// .table-hover .table-light:hover>th {
+//   background-color: #ececf6;
+// }
 
-.table-light,
-.table-light>th,
-.table-light>td {
-  background-color: #fdfdfe;
-}
+// .table-dark,
+// .table-dark>th,
+// .table-dark>td {
+//   background-color: #c6c8ca;
+// }
 
-.table-light th,
-.table-light td,
-.table-light thead th,
-.table-light tbody+tbody {
-  border-color: #fbfcfc;
-}
+// .table-dark th,
+// .table-dark td,
+// .table-dark thead th,
+// .table-dark tbody+tbody {
+//   border-color: #95999c;
+// }
 
-.table-hover .table-light:hover {
-  background-color: #ececf6;
-}
+// .table-hover .table-dark:hover {
+//   background-color: #b9bbbe;
+// }
 
-.table-hover .table-light:hover>td,
-.table-hover .table-light:hover>th {
-  background-color: #ececf6;
-}
+// .table-hover .table-dark:hover>td,
+// .table-hover .table-dark:hover>th {
+//   background-color: #b9bbbe;
+// }
 
-.table-dark,
-.table-dark>th,
-.table-dark>td {
-  background-color: #c6c8ca;
-}
+// .table-active,
+// .table-active>th,
+// .table-active>td {
+//   background-color: rgba(0, 0, 0, 0.075);
+// }
 
-.table-dark th,
-.table-dark td,
-.table-dark thead th,
-.table-dark tbody+tbody {
-  border-color: #95999c;
-}
+// .table-hover .table-active:hover {
+//   background-color: rgba(0, 0, 0, 0.075);
+// }
 
-.table-hover .table-dark:hover {
-  background-color: #b9bbbe;
-}
+// .table-hover .table-active:hover>td,
+// .table-hover .table-active:hover>th {
+//   background-color: rgba(0, 0, 0, 0.075);
+// }
 
-.table-hover .table-dark:hover>td,
-.table-hover .table-dark:hover>th {
-  background-color: #b9bbbe;
-}
+// .table .thead-dark th {
+//   color: #fff;
+//   background-color: #343a40;
+//   border-color: #454d55;
+// }
 
-.table-active,
-.table-active>th,
-.table-active>td {
-  background-color: rgba(0, 0, 0, 0.075);
-}
+// .table .thead-light th {
+//   color: #495057;
+//   background-color: #e9ecef;
+//   border-color: #dee2e6;
+// }
 
-.table-hover .table-active:hover {
-  background-color: rgba(0, 0, 0, 0.075);
-}
+// .table-dark {
+//   color: #fff;
+//   background-color: #343a40;
+// }
 
-.table-hover .table-active:hover>td,
-.table-hover .table-active:hover>th {
-  background-color: rgba(0, 0, 0, 0.075);
-}
+// .table-dark th,
+// .table-dark td,
+// .table-dark thead th {
+//   border-color: #454d55;
+// }
 
-.table .thead-dark th {
-  color: #fff;
-  background-color: #343a40;
-  border-color: #454d55;
-}
+// .table-dark.table-bordered {
+//   border: 0;
+// }
 
-.table .thead-light th {
-  color: #495057;
-  background-color: #e9ecef;
-  border-color: #dee2e6;
-}
+// .table-dark.table-striped tbody tr:nth-of-type(odd) {
+//   background-color: rgba(255, 255, 255, 0.05);
+// }
 
-.table-dark {
-  color: #fff;
-  background-color: #343a40;
-}
-
-.table-dark th,
-.table-dark td,
-.table-dark thead th {
-  border-color: #454d55;
-}
-
-.table-dark.table-bordered {
-  border: 0;
-}
-
-.table-dark.table-striped tbody tr:nth-of-type(odd) {
-  background-color: rgba(255, 255, 255, 0.05);
-}
-
-.table-dark.table-hover tbody tr:hover {
-  color: #fff;
-  background-color: rgba(255, 255, 255, 0.075);
-}
-
+// .table-dark.table-hover tbody tr:hover {
+//   color: #fff;
+//   background-color: rgba(255, 255, 255, 0.075);
+// }
 @media (max-width: 575.98px) {
   .table-responsive-sm {
     display: block;
