--- a/bundle_hadoop/src/partials/sidebar.html
+++ b/bundle_hadoop/src/partials/sidebar.html
@@ -69,7 +69,7 @@
                     <a href="#"> Adding hosts to a cluster </a>
                   </li>
                   <li>
-                    <a href="#"> Adding components</a>
+                    <a href="../addingcomponents.html"> Adding components</a>
                   </li>
                   <li>
                     <a href="#"> Services configuring </a>
@@ -243,7 +243,7 @@
             </ul>
           </li>
           <li class="nav-links-li">
-            <a href="#">Recommendations</a>
+            <a href="../recommendations.html">Recommendations</a>
           </li>
           <li class="nav-links-li">
             <a href="#">Workload patterns</a>
@@ -346,7 +346,7 @@
             <ul class="is_parent conf-par over-y">
               <div class="new-over">
                 <li>
-                  <a href="#">Airflow </a>
+                  <a href="../airflow.html">Airflow </a>
                 </li>
                 <li>
                   <a href="#">Flink </a>
