--- a/bundle_hadoop/src/partials/sidebar.html
+++ b/bundle_hadoop/src/partials/sidebar.html
@@ -275,7 +275,7 @@
                 <a href="#"> Architecture </a>
               </li>
               <li>
-                <a href="#"> Data model</a>
+                <a href="../datamodel.html"> Data model</a>
               </li>
             </ul>
           </li>
@@ -306,7 +306,7 @@
                 <a href="../hadoopcliref.html"> Hadoop CLI references</a>
               </li>
               <li>
-                <a href="#"> references:hdfs-cli.adoc</a>
+                <a href="../daemonlog.html"> Daemonlog</a>
               </li>
               <li>
                 <a href="#"> references:hdfs-cheatsheet.adoc</a>
