--- a/bundle_hadoop/src/assets/scss/blocks/content.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/content.scss
@@ -407,13 +407,9 @@
   height: 188px;
   width: 228px;
   max-height: 188px;
-
-
   background: linear-gradient(90.83deg, #323239 1.71%, #2A3137 96.43%);
   border-radius: 15px;
   border: 1px solid transparent;
-  // margin-bottom: 20px;
-
   position: relative;
 }
 
@@ -449,12 +445,9 @@
   position: absolute;
   top: 0;
   width: 100%;
-
   box-sizing: border-box;
   border-radius: 15px 15px 15px 0px;
-  // text-align: center;
   padding: 19px 24px 20px 24px;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -462,56 +455,55 @@
 
 .card-command.user .card-command-content .card-command-content__title {
   background: linear-gradient(111.14deg, rgba(169, 224, 226, 0.15) 7.26%, rgba(1, 248, 168, 0.15) 63.94%);
-
   border: 1px solid #00D2A0;
 }
 
 .card-command.admin .card-command-content .card-command-content__title {
   background: linear-gradient(111.14deg, rgba(255, 248, 187, 0.2) 7.26%, rgba(228, 248, 1, 0.2) 63.94%);
-
   border: 1px solid #FFE895;
 }
 
 .card-command.fs .card-command-content .card-command-content__title {
   background: linear-gradient(111.14deg, rgba(169, 219, 226, 0.15) 7.26%, rgba(1, 189, 248, 0.15) 63.94%);
-
-
   border: 1px solid #1997E8;
 }
 
 .caution {
-
   background-position: center;
   background-repeat: no-repeat;
   background-size: 36px;
   width: 36px;
   height: 36px;
   background-image: url("/assets/images/caution.svg");
-
 }
 
 .important {
-
   background-position: center;
   background-repeat: no-repeat;
   background-size: 36px;
   width: 36px;
   height: 36px;
   background-image: url("/assets/images/important.svg");
-
 }
 
 .note {
-
   background-position: center;
   background-repeat: no-repeat;
   background-size: 36px;
   width: 36px;
   height: 36px;
   background-image: url("/assets/images/note.svg");
-
 }
 
+
+.tip {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 36px;
+  width: 36px;
+  height: 36px;
+  background-image: url("/assets/images/tip.svg");
+}
 
 .block-commands-steps {
   margin-top: 8px;
@@ -752,7 +744,7 @@
 }
 
 .content-body__title {
-  margin-top: 24px;
+  // margin-top: 24px;
   font-style: normal;
   font-weight: bold;
   font-size: 30px;
@@ -841,7 +833,7 @@
 }
 
 .content-body-section {
-  padding-top: 24px;
+  // padding-top: 24px;
 }
 
 .content-body-section__text {
@@ -851,6 +843,21 @@
   font-size: 16px;
   line-height: 21px;
   color: #EFEFEF;
+}
+
+.content-body-section__text a {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 21px;
+
+  /* Blue */
+
+  color: #1997E8;
+}
+
+.content-body-section__text a:hover {
+  text-decoration: underline;
 }
 
 .content-body-image {
@@ -1397,4 +1404,113 @@
   font-size: 30px;
   line-height: 39px;
   color: #EFEFEF
+}
+
+.content-body-section__text-info {
+  padding: 8px 0 8px 52px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 21px;
+  color: #EFEFEF;
+}
+
+.block-example {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 16px;
+  margin: 16px 0;
+  padding: 36px;
+  border: 1px solid #353E47;
+  box-sizing: border-box;
+  border-radius: 15px;
+
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 21px;
+  text-align: center;
+
+  /* White with grey */
+
+  color: #EFEFEF;
+}
+
+
+
+
+.block-comment ol {
+  list-style-type: none;
+  counter-reset: num;
+  margin: 0 0 0 60px;
+  padding: 15px 0 5px 0;
+  font-size: 16px;
+}
+
+.block-comment ol li {
+  position: relative;
+  margin: 0 0 0 0;
+  padding: 0 0 10px 0;
+  line-height: 1.4;
+}
+
+.block-comment ol li:before {
+  content: counter(num);
+  counter-increment: num;
+  display: inline-block;
+  position: absolute;
+  top: 4px;
+  left: -37px;
+  width: 18px;
+  height: 18px;
+  background: #00D2A0;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 19px;
+  text-align: center;
+  border-radius: 50%;
+  color: #353E47;
+  // border: 1px solid #ef6780;
+}
+
+.table-arg {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0 8px;
+}
+
+.table-arg tbody td {
+
+  padding: 28px 32px;
+
+}
+
+.table-arg tbody tr td:first-child {
+  width: 362px;
+  background: #323239;
+  border-radius: 15px 0px 0px 15px;
+  vertical-align: middle;
+  font-family: DMMono;
+}
+
+.table-arg tbody tr td:last-child {
+  background: rgba(50, 50, 57, 0.5);
+  border-radius: 0px 15px 15px 0px;
+  vertical-align: middle;
+
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 21px;
+
+  /* Grey Lighter */
+
+  color: #C4C4C4;
+}
+
+span.dmmono {
+  font-family: DMMono;
 }
