--- a/bundle_hadoop/src/partials/sidebar.html
+++ b/bundle_hadoop/src/partials/sidebar.html
@@ -63,7 +63,7 @@
                     <a href="#"> Cluster creation</a>
                   </li>
                   <li>
-                    <a href="#"> Adding services </a>
+                    <a href="../addingservices.html"> Adding services </a>
                   </li>
                   <li>
                     <a href="#"> Adding hosts to a cluster </a>
