--- a/bundle_hadoop/src/assets/scss/blocks/content.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/content.scss
@@ -11,8 +11,9 @@
 }
 
 .content {
-  // padding: 0px 36px;
+  // padding-top: 36px;
   margin: 0px 36px;
+
 }
 
 .content-head {
@@ -328,6 +329,7 @@
   position: relative;
   // padding: 8px 0;
   // margin-bottom: 16px;
+  width: 100%;
   margin: 16px 0;
 }
 
@@ -530,20 +532,20 @@
 
 
 
-.block-commands ul {
-  list-style: none;
-}
+// .block-commands ul {
+//   list-style: none;
+// }
 
-.block-commands ul li .steps-content__text {
-  padding-left: 0;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 21px;
+// .block-commands ul li .steps-content__text {
+//   padding-left: 0;
+//   font-style: normal;
+//   font-weight: normal;
+//   font-size: 16px;
+//   line-height: 21px;
 
 
-  color: #EFEFEF;
-}
+//   color: #EFEFEF;
+// }
 
 .block-commands ol {
 
@@ -554,14 +556,25 @@
   line-height: 21px;
 }
 
+.block-commands ol.start4 {
+  counter-increment: num 3;
+}
+
 .block-commands ol li {
   position: relative;
   margin: 0 0 0 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-direction: column;
+  vertical-align: top;
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: flex-start;
+  // flex-direction: column;
 }
+
+.block-commands ol li ul li::before {
+  content: '';
+  counter-increment: none;
+}
+
 
 .block-commands ol ol {
   counter-reset: num2;
@@ -598,7 +611,7 @@
   counter-increment: num;
   display: inline-block;
   position: absolute;
-  top: 0px;
+  top: -7px;
   left: 20px;
   // width: 30px;
   text-align: center;
@@ -744,7 +757,7 @@
 }
 
 .content-body__title {
-  // margin-top: 24px;
+  margin-top: 48px;
   font-style: normal;
   font-weight: bold;
   font-size: 30px;
@@ -777,7 +790,7 @@
 }
 
 .custom-list-first {
-  list-style-image: url('/assets/images/firstli.svg');
+  list-style-image: url('/assets/images/firstli.svg') !important;
 
   font-style: normal;
   font-weight: normal;
@@ -919,6 +932,16 @@
   border-bottom: 1px solid #353E47;
   text-align: start;
   vertical-align: middle;
+
+}
+
+.table-2 tbody tr td a {
+  color: #1997E8;
+
+}
+
+.table-2 tbody tr td a:hover {
+  text-decoration: underline;
 
 }
 
@@ -1296,7 +1319,7 @@
   background: rgba(50, 50, 57, 0.5);
   border-bottom: 1px solid #353E47;
   text-align: start;
-  vertical-align: middle;
+  vertical-align: baseline;
 
 }
 
@@ -1336,8 +1359,11 @@
 
 }
 
+.table-3a tbody tr:first-child td:first-child {
+  // vertical-align: baseline;
+}
 
-.table-3a tbody tr td.test {
+.table-3a tbody tr td.border-l {
   // border: 1px solid red;
   border-radius: 0 0 15px 15px;
   border-bottom: 1px solid transparent;
@@ -1480,6 +1506,7 @@
   width: 100%;
   border-collapse: separate;
   border-spacing: 0 8px;
+  padding: 24px 0;
 }
 
 .table-arg tbody td {
@@ -1513,4 +1540,64 @@
 
 span.dmmono {
   font-family: DMMono;
+}
+
+
+// block select
+
+
+.block-select {
+  padding-top: 36px;
+}
+
+.block-select-head {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: row;
+  gap: 28px;
+}
+
+.block-select-head__text {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 21px;
+  /* identical to box height */
+
+  text-align: right;
+
+  /* Off White */
+
+  color: #FCFCFD;
+}
+
+.block-select-buttons {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 21px;
+  /* identical to box height */
+
+
+  /* Grey Light */
+
+  color: #7F7F7F;
+}
+
+.block-select-buttons.active {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 21px;
+  /* identical to box height */
+
+
+  /* Off White */
+
+  color: #FCFCFD;
+}
+
+.pt-36 {
+  padding-top: 36px;
 }
