--- a/bundle_hadoop/src/layouts/has_sidebar.html
+++ b/bundle_hadoop/src/layouts/has_sidebar.html
@@ -26,6 +26,7 @@
   </div>
   <!-- JS -->
   <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.magnific-popup.min.js"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/highlightjs.js"></script>
   <script src="assets/js/app.js"></script>
