--- a/bundle_hadoop/src/assets/scss/style.scss
+++ b/bundle_hadoop/src/assets/scss/style.scss
@@ -4,7 +4,7 @@
 @import "blocks/animate.scss";
 @import "vars";
 @import "vendor/reset";
-
+@import "blocks/magnific-popup.scss";
 
 // pages
 @import "blocks/pages/hadoop.scss";
