--- a/bundle_hadoop/src/assets/scss/style.scss
+++ b/bundle_hadoop/src/assets/scss/style.scss
@@ -55,4 +55,5 @@ a:active {
 @import "blocks/social-media.scss";
 @import "blocks/popular-topic.scss";
 @import "blocks/blocks-card.scss";
-@import "blocks/highlightjs.scss";
+// @import "blocks/highlightjs.scss";
+@import "blocks/atom-one-dark.min.scss";
