--- a/bundle_hadoop/src/assets/scss/blocks/sidebar.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/sidebar.scss
@@ -200,7 +200,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: 14px;
-
+  margin-top: 18px;
 
   margin-left: 12px;
   width: 13.5px;
