--- a/bundle_hadoop/src/assets/scss/fonts/f.scss
+++ b/bundle_hadoop/src/assets/scss/fonts/f.scss
@@ -49,7 +49,7 @@
 @font-face {
   font-family: "DMMono";
   font-display: swap;
-  src: url("../fonts/DMMono-Regular") format("woff"), url("../fonts/DMMono-Regular.woff2") format("woff2");
+  src: url("../fonts/DMMono-Regular.woff") format("woff"), url("../fonts/DMMono-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
