--- a/bundle_hadoop/src/layouts/has_sidebar.html
+++ b/bundle_hadoop/src/layouts/has_sidebar.html
@@ -28,7 +28,7 @@
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/jquery.magnific-popup.min.js"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/highlightjs.js"></script>
+  <script src="assets/js/highlight.min.js"></script>
   <script src="assets/js/app.js"></script>
 </body>
 
